[package]
name = "ghook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha256 = "1.1.6"
ntex = { version = "0.6.3", features = ["tokio"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
